--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hola web
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Control de Versions</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header>
+      <a href="cv/index.html">link a cv</a>
+    </header>
+    <h1>Control de Versions</h1>
+    <div id="contenedor">
+        <p id="textoDiv">Aquest és el text original.</p>
+        <button id="btnCambiar">Canviar text</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+
+</html>
